[workspace]
members = [
    "webtor",
    "webtor-wasm",
    "webtor-demo"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Webtor Contributors"]
license = "MIT"
repository = "https://github.com/voltrevo/webtor-rs"

[workspace.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
tracing = "0.1"
tracing-wasm = "0.2"
getrandom = { version = "0.2", features = ["js"] }

# Tor-related dependencies
tor-rtcompat = "0.10"
tor-circmgr = "0.10"
tor-proto = "0.10"
tor-netdoc = "0.10"
tor-config = "0.10"
tor-dirmgr = "0.10"
tor-keymgr = "0.10"
tor-linkspec = "0.10"
tor-llcrypto = "0.10"
tor-cell = "0.10"
tor-error = "0.10"
tor-async-utils = "0.10"

# Cryptography
rsa = "0.9"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
chacha20poly1305 = "0.10"
sha1 = "0.10"
sha3 = "0.10"
hex = "0.4"
base64 = "0.22"

# Async runtime
wasm-bindgen-test = "0.3"