[package]
name = "webtor-rs-lite"
version = "0.1.0"
edition = "2021"
authors = ["Webtor Contributors"]
license = "MIT"
description = "Lightweight Snowflake transport for arti-client integration"

[dependencies]
# Core async runtime
futures = "0.3"
thiserror = "1.0"
tracing = "0.1"

# Tor protocol implementation
tor-rtcompat = { path = "../tor-rtcompat", default-features = false }
tor-time = { path = "../tor-time", version = "0.39.0" }
tor-proto = { path = "../tor-proto", default-features = false }
tor-netdoc = { path = "../tor-netdoc", default-features = false }
tor-linkspec = { path = "../tor-linkspec" }
tor-llcrypto = { path = "../tor-llcrypto" }
tor-error = { path = "../tor-error" }
tor-memquota = { path = "../tor-memquota" }
tor-chanmgr = { path = "../tor-chanmgr" }
tor-async-compat = { path = "../tor-async-compat", version = "0.39.0" }

# Cryptography
hex = "0.4"

# Networking
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# KCP reliable transport
kcp = "0.6"

# Random
rand = { version = "0.8", features = ["std", "std_rng"] }

# WASM utilities
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-specific
tokio = { version = "1", features = ["sync", "macros"] }
subtle-tls = { path = "../subtle-tls" }
async-trait = "0.1"
web-sys = { version = "0.3.69", features = [
    "console",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "Window",
    "Performance",
    # HTTP fetch features
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    # WebRTC features for Snowflake
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcSignalingState",
    "RtcDataChannelType",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-specific
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
futures-rustls = { version = "0.26", default-features = false, features = ["ring"] }
webpki = { package = "rustls-webpki", version = "0.103.1" }
rustls-pki-types = "1.8"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["compat"] }
webpki-roots = "0.26"
async-trait = "0.1"

[features]
default = []