[package]
name = "webtor-rs"
version = "0.5.7"
edition = "2021"
authors = ["Webtor Contributors"]
license = "MIT"
repository = "https://github.com/voltrevo/webtor-rs"
description = "Core Tor client implementation for web browsers"

[dependencies]
# Core async runtime
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Tor protocol implementation
tor-rtcompat = { path = "../tor-rtcompat", default-features = false }
tor-time = { path = "../tor-time", version = "0.38.0" }
tor-proto = { path = "../tor-proto", default-features = false }
tor-protover = { path = "../tor-protover" }
tor-units = { path = "../tor-units" }
tor-netdoc = { path = "../tor-netdoc", default-features = false }
tor-linkspec = { path = "../tor-linkspec" }
tor-llcrypto = { path = "../tor-llcrypto" }
tor-cell = { path = "../tor-cell" }
tor-error = { path = "../tor-error" }
tor-async-utils = { path = "../tor-async-utils" }
tor-memquota = { path = "../tor-memquota" }
wasm-bindgen-futures = "0.4"

# Cryptography
rsa = "0.9"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
chacha20poly1305 = "0.10"
sha1 = "0.10"
sha3 = "0.10"
hex = "0.4"
base64 = "0.22"

# Networking
url = "2.5"
http = "1.1"

# Public Suffix List for eTLD+1 extraction
public-suffix = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compression
flate2 = "1.0"
brotli = "7.0"
uuid = { version = "1.0", features = ["v4", "js"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
web-sys = { version = "0.3.69", features = [
    "console",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "ReadableStream",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlTextAreaElement",
    "HtmlDivElement",
    "Text",
    "Node",
    "NodeList",
    "DocumentFragment",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "KeyboardEvent",
    "Blob",
    "FileReader",
    "Response",
    "Request",
    "Headers",
    "RequestInit",
    # WebRTC features for Snowflake
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcSignalingState",
    "RtcDataChannelType",
    # HTTP fetch features
    "RequestMode",
    # Performance API for timing
    "Performance"
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
httparse = "1.10.1"
tor-checkable = { path = "../tor-checkable" }

# Optional: arti-client integration
tor-chanmgr = { path = "../tor-chanmgr", optional = true }
tor-wasm-compat = { path = "../tor-wasm-compat", optional = true }

# KCP reliable transport
kcp = "0.6"

# WASM utilities
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# On WASM, only use tokio features that don't require mio
tokio = { version = "1", features = ["sync", "macros"] }
# WASM TLS (SubtleCrypto-based)
subtle-tls = { path = "../subtle-tls" }
async-trait = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# On native, use full tokio features
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }
# Native TLS (non-WASM only) - ring doesn't compile to WASM
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
futures-rustls = { version = "0.26", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
rustls-pki-types = "1.8"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
# Certificate parsing for Tor handshake
webpki = { package = "rustls-webpki", version = "0.103.1" }

# Native WebSocket (non-WASM only)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Tokio compatibility utilities (includes CancellationToken)
tokio-util = { version = "0.7", features = ["compat"] }
# async-trait for ChannelFactory/AbstractPtMgr impl
async-trait = "0.1"

[features]
default = []
integration-tests = []
# Enable arti-client integration (provides SnowflakePtMgr for use with arti)
arti-integration = ["tor-chanmgr", "tor-wasm-compat"]

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
wasm-bindgen-test = "0.3"

# Integration benchmark (manual, requires network)
[[bench]]
name = "tor_benchmark"
harness = false