[package]
name = "webtor-wasm"
version = "0.5.7"
edition = "2021"
authors = ["Webtor Contributors"]
license = "MIT"
repository = "https://github.com/voltrevo/webtor-rs"
description = "WebAssembly bindings for webtor"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
webtor-rs = { path = "../webtor-rs" }
http = "1.1"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3.69", features = [
    "console",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "ReadableStream",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlTextAreaElement",
    "HtmlDivElement",
    "Text",
    "Node",
    "NodeList",
    "DocumentFragment",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "KeyboardEvent",
    "Blob",
    "FileReader",
    "Response",
    "Request",
    "Headers",
    "RequestInit",
    # WebRTC features for Snowflake
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcSignalingState",
    "RtcDataChannelType",
    # HTTP fetch features
    "RequestMode",
    # Performance API for timing
    "Performance"
] }
serde-wasm-bindgen = "0.6"

# Async runtime for WASM
futures = "0.3"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
# Use gloo-console or simple wrapper for console_log!
gloo-console = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
console_error_panic_hook = "0.1"

# Random number generation for WASM
getrandom = { version = "0.2", features = ["js"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false