[package]
name = "webtor-demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Demo webpage for webtor-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
webtor-wasm = { path = "../webtor-wasm" }

# WASM bindings
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-wasm = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "HtmlTextAreaElement",
  "HtmlDivElement",
  "Text",
  "Node",
  "NodeList",
  "DocumentFragment",
  "Event",
  "EventTarget",
  "MouseEvent",
  "InputEvent",
  "KeyboardEvent",
  "Date",
]

[dev-dependencies]
wasm-bindgen-test = { workspace = true }