[package]
name = "webtor-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for webtor"

[lib]
crate-type = ["cdylib"]

[dependencies]
webtor = { path = "../webtor" }

# WASM bindings
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }

# Async runtime for WASM
wasm-bindgen-futures = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-wasm = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
console_error_panic_hook = "0.1"

# Random number generation for WASM
getrandom = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "ErrorEvent",
  "Event",
  "EventTarget",
  "Blob",
  "FileReader",
  "Response",
  "Request",
  "Headers",
  "RequestInit",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "HtmlTextAreaElement",
  "Text",
  "Node",
  "NodeList",
  "DocumentFragment",
]

[dev-dependencies]
wasm-bindgen-test = { workspace = true }