[package]
name = "webtor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core Tor client implementation for web browsers"

[dependencies]
# Core async runtime
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Tor protocol implementation
tor-rtcompat = { workspace = true }
tor-circmgr = { workspace = true }
tor-proto = { workspace = true }
tor-netdoc = { workspace = true }
tor-config = { workspace = true }
tor-dirmgr = { workspace = true }
tor-keymgr = { workspace = true }
tor-linkspec = { workspace = true }
tor-llcrypto = { workspace = true }
tor-cell = { workspace = true }
tor-error = { workspace = true }
tor-async-utils = { workspace = true }

# Cryptography
rsa = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
sha1 = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Networking
url = { workspace = true }
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"